--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,19 @@
 title: Damon Overboe's blog
 email: blog.dtol@spamgourmet.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog primarily about software craftsmanship, leadership, and all
+  things continuous delivery related.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://damonoverboe.org" # the base hostname & protocol for your site
 twitter_username: DamonOverboe
 github_username:  DamonOverboe
 
 # Build settings
 markdown: kramdown
+
+# Serving options
+# might not need these, this was from the theme...; see src/blogs on 417hockey
+## then make sure the rest is there
+gems: [jekyll-paginate]
+paginate: 5
+paginate_path: "page:num"
