--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Damon Overboe's blog
-email: blog.dtol@spamgourmet.com
+#email: blog.dtol@spamgourmet.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog primarily about software craftsmanship, leadership, and all
   things continuous delivery related.
